# 9DTSR_MLOPS_TrabalhoFinal

./: Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
9dtsr_mlops_trabalhofinal/: __init__.py  dataset.py  features.py  plots.py
9dtsr_mlops_trabalhofinal/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: register_model.py
notebooks/: data-processing.ipynb  model-development.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
