[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "9dtsr_mlops_trabalhofinal"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jefferson Santos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["9dtsr_mlops_trabalhofinal"]
include = ["pyproject.toml", "9dtsr_mlops_trabalhofinal/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["9dtsr_mlops_trabalhofinal"]
force-sort-within-sections = true

